<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bienvenido"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_loguearse_para_conectarse_con_nosotros"/>
        
        <EditText
            android:id="@+id/edt_tel_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_edt_email_tel"
            android:layout_marginTop="50dp"/>
        
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_contrase_a"
            android:layout_marginTop="15dp"/>
        
        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/login_btn_iniciar_sesion"
            android:background="@drawable/login_rounded_button"
            android:layout_marginTop="20dp"/>
        
        <TextView
            android:id="@+id/tv_olvidasteContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_tv_Olvidaste_contraseña"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_no_tienes_una_cuenta"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:text="@string/login_enscribirse"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>